Removed git in gitgit name

--- a/index.html
+++ b/index.html
@@ -360,7 +360,7 @@
                      <li>Concerns about lead exposure in petrol prompted health guidelines to maintain blood lead levels below 10 µg/dL due to its adverse effects on cognitive function, particularly in children. Lead exposure can impact various bodily systems and reduce oxygen-carrying capacity in the blood.</li>
                      <li>This prototype, focused on electronics, digital circuit design, and microcontrollers, targets the reduction of diesel engine pollutants to enhance air quality and mitigate health risks associated with lead particles from busy roads.</li>
                   </ul>
-                  <a class="btn btn-outline-primary" href="https://github.com/divyashrim11/LeadContent.gitgit "><i
+                  <a class="btn btn-outline-primary" href="https://github.com/divyashrim11/LeadContent.git "><i
                      class="fab fa-github"></i> View on GitHub </a>
                </div>
                <div class="flex-shrink-0"><span class="text-primary">Aug 2017 - Jan 2018</span></div>
