--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
    <!-- Navigation-->
    <nav class="navbar navbar-expand-lg navbar-dark fixed-top" style="background-color: #0c585f;" id="sideNav">
       <a class="navbar-brand js-scroll-trigger" href="#page-top">
-      <span class="d-block d-lg-none">Divya Shree Moka</span>
+      <span class="d-block d-lg-none">Divya Shree Moka hi</span>
       <span class="d-none d-lg-block"><img class="img-fluid img-profile rounded-circle z-depth-2 mx-auto mb-2"
          src="assets/img/profileImage.jpeg" alt="500x500" /></span>
       </a>
