--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
    <!-- Navigation-->
    <nav class="navbar navbar-expand-lg navbar-dark fixed-top" style="background-color: #0c585f;" id="sideNav">
       <a class="navbar-brand js-scroll-trigger" href="#page-top">
-      <span class="d-block d-lg-none">Divya Shree Moka hi</span>
+      <span class="d-block d-lg-none">Divya Shree Moka</span>
       <span class="d-none d-lg-block"><img class="img-fluid img-profile rounded-circle z-depth-2 mx-auto mb-2"
          src="assets/img/profileImage.jpeg" alt="500x500" /></span>
       </a>
@@ -29,7 +29,7 @@
          class="navbar-toggler-icon"></span></button>
       <div class="collapse navbar-collapse" id="navbarResponsive">
          <ul class="navbar-nav">
-            <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#about">About</a></li>
+            <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#about">About HI</a></li>
             <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#experience">Work Experience</a></li>
             <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#education">Education</a></li>
             <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#skills">Skills</a></li>
