--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                <span class="name-color">MOKA</span>
             </h1>
             <div class="subheading mb-5">
-               415 WEST JENKINS STREET · MARYVILLE, MO 64468 · (660) 528-1921 ·
+               KANSAS CITY, MO 64468
                <a href="mailto:divyashrimoka2021@gmail.com" class="name-color">DIVYASHRIMOKA2021@GMAIL.COM</a>
             </div>
             <p class="lead mb-5">  DATA ENGINEER · TABLEAU DEVELOPER · BIG DATA ENTHUSIAST · TECHNOPHILE · TEAM PLAYER</p>
