--- a/index.html
+++ b/index.html
@@ -14,7 +14,6 @@
    <link href="https://fonts.googleapis.com/css?family=Muli:400,400i,800,800i" rel="stylesheet" type="text/css" />
    <!-- Core theme CSS (includes Bootstrap)-->
    <link href="css/styles.css" rel="stylesheet" />
-
 </head>
 <body>
    <!-- Navigation-->
@@ -73,13 +72,14 @@
                   <h3 class="mb-0">Data Engineer</h3>
                   <div class="subheading mb-3">WIPRO TECHNOLOGIES</div>
                   <ul>
-                     <li>Led successful migrations to Azure, resulting in substantial cost savings and performance improvements.</li>
-                     <li>Improved data processing speed by 40% through efficient integration of large datasets from diverse sources.</li>
-                     <li>Implemented Azure services, automations, and models for enhanced operational efficiency and data-driven decision-making.</li>
-                     <li>Demonstrated proficiency in Azure DevOps, security measures, and governance policies, ensuring seamless operations and compliance.</li>
-                     <li>Leveraged IoT solutions for real-time data visualization, leading to increased operational efficiency and reduced downtime.</li>
-                     <li>Implemented Docker and Kubernetes for efficient microservices deployment, optimizing resource utilization.</li>
-                     <li>Led Jenkins integration, significantly reducing deployment time and increasing release frequency, showcasing effective teamwork.</li>
+                     <li>Around 4 years of experience as a Data Engineer. Proficient in data extraction, modification, validation, analysis, management, and reporting. Strong expertise in ETL development, including designing specifications, offshore development coordination, and optimal ETL mappings.</li>
+                     <li>Demonstrated proficiency in utilizing a diverse set of programming languages, including Python, SQL, Scala, and Shell Scripting, to conduct comprehensive data engineering tasks, spanning scripting, analysis, and automation.</li>
+                     <li>Applied extensive experience with powerful libraries such as NumPy, Pandas, SciPy, Scikit-Learn, TensorFlow, and Matplotlib, ensuring the realization of advanced data processing, machine learning, and visualization capabilities for complex datasets.</li>
+                     <li>Utilized extensive knowledge of Big Data technologies, including Hadoop, Hive, Sqoop, Oozie, and HDFC, enabling the development of robust and efficient big data processing pipelines.</li>
+                     <li>Proficiently used visualization tools like Tableau, Power BI, and MS Excel, ensuring the effective communication of insights and trends to both technical and non-technical stakeholders.</li>
+                     <li>Showcased expertise in managing a variety of databases, including MySQL, PostgreSQL, Oracle, and MongoDB, reflecting a versatile skill set in handling diverse data storage and retrieval needs.</li>
+                     <li>Applied proficiency in both Agile (SCRUM) and Waterfall methodologies, seamlessly adapting to varying project requirements and ensuring efficient collaboration within dynamic development environments.</li>
+                     <li>Demonstrated adeptness at leveraging cloud technologies, particularly AWS (EC2, EBS, S3, EMR, AWS Glue, DMS) and Microsoft Azure (Databricks, Azure Function , BLOB and Data Lake storage, Azure SQL Synapse Analytics (DW), showcasing the ability to design, implement, and optimize scalable and reliable data solutions on leading cloud platforms.</li>
                   </ul>
                </div>
                <div class="flex-shrink-0"><span class="text-primary">Jun 2019 - Jul 2023</span></div>
@@ -96,7 +96,7 @@
                   <h3 class="mb-0">NorthWest Missouri State University</h3>
                   <div class="subheading mb-3">MASTER OF SCIENCE</div>
                   <div>COMPUTER SCIENCE</div>
-                  <p>GPA: 3.5</p>
+                  <p>GPA: 3.70</p>
                </div>
                <div class="flex-shrink-0"><span class="text-primary">August 2022 - December 2023</span></div>
             </div>
@@ -171,62 +171,43 @@
             <h2 class="mb-5">Projects</h2>
             <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                <div class="flex-grow-1">
-                  <h3 class="mb-0"> 1. DATA TRANSFORMATION AND OPTIMIZATION - TELEFONICA</h3>
-                  <div class="subheading mb-3">Kafka, PySpark, Tableau, Microsoft Azure(Functions, Machine Learning, DevOps Pipelines, Security Center, Monitor, Log Analytics)</div>
-                  <p> The project at Telefonica, led by the Data Engineer, involved a successful migration from Oracle to Azure SQL Database, saving $670,000 annually with a 14% performance boost. Integrating 150 million records from 30+ sources using Kafka and PySpark led to a 40% speed increase. Automation through Azure Functions, Machine Learning, and DevOps pipelines significantly enhanced operational efficiency. Emphasis on security and compliance resulted in high industry standards adherence, while proactive monitoring and optimization improved system responsiveness by 25%. This comprehensive utilization of Azure services, data processing tech, and automation led to substantial performance and cost-saving improvements. </p>
+                  <h3 class="mb-0">Molina HealthCare - USA</h3>
                   <div class="subheading mb-3">Responsibilities</div>
                   <ul>
-                     <li>Led a successful migration from Oracle to Azure SQL Database, resulting in a cost savings of $670,000 annually and a 14% performance boost.</li>
-                     <li>Improved data processing speed by 40% through the integration of 150M records from 30+ sources using Kafka and PySpark.</li>
-                     <li>Created data views for BI tools like Tableau by ingesting data from various sources, enhancing team collaboration and efficiency.</li>
-                     <li>Utilized Azure services to optimize workflows, resulting in a 30% reduction in processing time.</li>
-                     <li>Automated 80% of data processing tasks using Azure Functions, leading to a significant increase in operational efficiency.</li>
-                     <li>Developed predictive models with Azure Machine Learning, achieving an accuracy rate of 90% for forecasting.</li>
-                     <li>Implemented Azure DevOps pipelines, reducing deployment time by 50% and ensuring smooth integration.</li>
-                     <li>Strengthened security measures, achieving a 99% compliance rate with industry standards using Azure Security Center.</li>
-                     <li>Improved system responsiveness by 25% through proactive monitoring and optimization with Azure Monitor and Log Analytics.</li>
-                     <li>Enforced governance policies, achieving a 95% compliance rate across Azure resources using Azure Policy and Blueprints.</li>
+                     <li>Spearheaded end-to-end processes for Data Extraction, Integration, Modification, Validation, Analysis, Management, and Reporting, resulting in a streamlined and efficient data workflow.</li>
+                     <li>Employed advanced features of Scikit-Learn and TensorFlow to optimize machine learning models, enhancing predictive accuracy and reducing inference time by 20%.</li>
+                     <li>Developed Python applications, scripts, and automation tools, enhancing workflow efficiency and productivity by automating repetitive tasks, reducing manual effort by 25%.</li>
+                     <li>Leveraged Amazon Web Services (AWS), employing AWS Glue, EC2, and PySpark for computing, and S3 as a storage mechanism, leading to a 20% improvement in data processing speed. </li>
+                     <li>Configured and managed a Cloudera cluster, optimizing infrastructure setup and component configuration, resulting in a robust and functional Hadoop cluster.</li>
+                     <li>Automated ETL logic development offshore, ensuring accurate understanding and enabling the creation of optimal ETL mappings.</li>
+                     <li>Designed and implemented complex and interactive dashboards in Tableau incorporating dynamic visualizations and user-driven parameters to enhance data exploration capabilities.</li>
+                     <li>Implemented CI/CD pipelines using Jenkins, developed Ansible templates for automatic code deployment, and configured SonarQube to enhance code quality, resulting in a 30% reduction in deployment time.</li>
                   </ul>
                </div>
-               <div class="flex-shrink-0"><span class="text-primary">Oct 2020 - Jul 2022</span></div>
+               <div class="flex-shrink-0"><span class="text-primary">Sept 2023 - Present</span></div>
             </div>
             <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                <div class="flex-grow-1">
-                  <h3 class="mb-0"> 2. STREAMLINED DATA PROCESSING AND OPTIMIZATION INITIATIVE - AMP LIFE</h3>
-                  <div class="subheading mb-3">Tech Stack : Python, Tableau, Microsoft Azure(Databricks, Synapse, Data Lake Storage, Stream Analytics, Machine Learning, DevOps, Blob Storage, Table Storage, Virtual Machines)</div>
-                  <p> The project involved designing and implementing an integrated data optimization and automation initiative, leveraging a robust tech stack to enhance data processing efficiency, reporting capabilities, and storage solutions. Key achievements include achieving remarkable data pipeline uptime, orchestrating the implementation of a scalable architecture for a new product, and streamlining client interactions resulting in significant time savings. </p>
+                  <h3 class="mb-0">WIPRO - INDIA</h3>
                   <div class="subheading mb-3">Responsibilities</div>
                   <ul>
-                     <li>Achieved a remarkable 99.8% data pipeline up-time using Azure Databricks, Synapse, Data Lake Storage, and Python, ensuring seamless ingestion of streaming and transactional data from 8 primary sources.</li>
-                     <li>Orchestrated the implementation of a scalable data pipeline architecture for a new product, facilitating rapid growth to 125,000 daily active users.</li>
-                     <li>Streamlined client interactions, translating business needs into actionable Tableau reports, resulting in a substantial 17-hour reduction in manual work weekly.</li>
-                     <li>Enhanced real-time data processing efficiency by 20% through the implementation of Azure Stream Analytics, ensuring timely insights from streaming sources.</li>
-                     <li>Improved forecasting accuracy by 25% using Azure Machine Learning, enabling data-driven decision-making and contributing to project success.</li>
-                     <li>Implemented Azure DevOps for automated deployment, reducing deployment time by 40% and fostering efficient collaboration within the team.</li>
-                     <li>Optimized storage solutions, achieving a 30% reduction in storage costs through the strategic use of Azure Blob Storage and Azure Table Storage.</li>
-                     <li> Leveraged Azure Virtual Machines to boost data processing speed during peak loads, resulting in a 15% improvement in processing efficiency.</li>
+                     <li>Created Hive tables, implemented loading and data analysis using efficient Hive queries, and constructed reusable Hive UDF libraries, resulting in a 20% improvement in data processing efficiency.</li>
+                     <li>Employed Hadoop Distributed File System (HDFS) for storage and replication of extensive datasets across the cluster, ensuring data availability and reliability.</li>
+                     <li>Creating custom visualization solutions with Matplotlib and Seaborn, enhancing data storytelling capabilities and facilitating better understanding of complex data patterns by stakeholders.</li>
+                     <li>Developed custom visualization solutions using Matplotlib and Seaborn, elevating data storytelling capabilities and fostering a clearer understanding of intricate data patterns among stakeholders.</li>
+                     <li>Leveraged Python's integration capabilities with databases and APIs for proficient data retrieval, storage, and manipulation, enhancing overall data handling efficiency.</li>
+                     <li>Automated metadata file cleaning and loading for specific locations using a Python script, streamlining data preparation processes and reducing manual effort by 30%.</li>
+                     <li>Utilized Power BI to seamlessly integrate with external APIs, automating data retrieval processes and ensuring real-time or near-real-time updates for dynamic and up-to-date reports.</li>
+                     <li>Conducted data cleaning and preparation on raw datasets, generating preprocessed data using various Hive scripts, improving data quality and accuracy.</li>
+                     <li>Developed a batch ETL pipeline, loading data into Teradata target tables efficiently utilizing HDFS, resulting in a 25% reduction in data loading time.</li>
+                     <li>Created and executed SQL queries and PL/SQL on Oracle databases for efficient data extraction and manipulation.</li>
+                     <li>Generated aggregated data using Hive ETLs and Spark ETLs for complex and large datasets, improving data processing speed by 35%.</li>
+                     <li>Designed end-to-end optimal SQL-driven ETL pipelines for a Data Warehouse in Google Cloud Big Query, orchestrating automated execution using Airflow, leading to a 30% improvement in pipeline efficiency.</li>
+                     <li>Collaborated with cross-functional teams, including data engineers, data analysts, and business stakeholders, to understand data requirements and deliver optimal solutions using Snowflake.</li>
+                     <li>Successfully implemented a proof of concept (POC) for building an ETL pipeline using Cloud Data Fusion, extracting data from a private Cloud SQL instance, loading it into Big Query, and scheduling workflows using Airflow, resulting in a 40% reduction in time for data processing and analysis.</li>
                   </ul>
                </div>
                <div class="flex-shrink-0"><span class="text-primary">Nov 2019 - Oct 2020</span></div>
-            </div>
-            <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
-               <div class="flex-grow-1">
-                  <h3 class="mb-0"> 3. IOT PLATFORM ENHANCEMENT - ERICSSON</h3>
-                  <div class="subheading mb-3">Tech Stack : Amazon Web Services (Lambda, Redshift, SageMaker, CloudWatch, S3, SNS, Migration Hub, Config), IoT, Power BI</div>
-                  <p>The Ericsson IoT Platform Enhancement project focused on advancing Ericsson's Internet of Things (IoT) platform to meet the demands of a rapidly growing user base and the evolving landscape of IoT technologies. The primary objective was to enhance scalability, real-time data processing capabilities, and advanced analytics functionalities.</p>
-                  <div class="subheading mb-3">Responsibilities</div>
-                  <ul>
-                     <li>Led a cross-functional team to implement an AWS Lambda-based serverless architecture, achieving a 45% reduction in operational costs and a 30% improvement in response time for critical API endpoints.</li>
-                     <li>Implemented Amazon Redshift for data warehousing, resulting in a 20% increase in query performance and a 15% reduction in data processing time, enhancing analytics capabilities.</li>
-                     <li>Orchestrated a migration of legacy systems to AWS Cloud using AWS Migration Hub, achieving a seamless transition and reducing system downtime by 40%.</li>
-                     <li>Leveraged Amazon SageMaker for machine learning model deployment, leading to a 35% improvement in predictive accuracy and enabling data-driven decision-making.</li>
-                     <li>Implemented AWS CloudWatch and AWS Config for enhanced monitoring and governance, resulting in a 25% reduction in incident response time and ensuring compliance with industry standards.</li>
-                     <li>Collaborated with a diverse team to set up a multi-region AWS architecture, achieving 99.99% uptime and ensuring high availability for critical applications.</li>
-                     <li>Designed and implemented an AWS S3-based data lake solution, resulting in a 30% improvement in data accessibility and enabling advanced analytics capabilities.</li>
-                     <li>Led the integration of Amazon SNS for event-driven notifications, resulting in a 40% improvement in real-time alerting and incident management.</li>
-                  </ul>
-               </div>
-               <div class="flex-shrink-0"><span class="text-primary">Jun 2019 - Nov 2019</span></div>
             </div>
          </div>
       </section>
@@ -430,5 +411,3 @@
       </section>
    </div>
 </body>
-
-
