--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                <span class="name-color">MOKA</span>
             </h1>
             <div class="subheading mb-5">
-               KANSAS CITY, MO 64468
+               DALLAS, TX 75033
                <a href="mailto:divyashrimoka2021@gmail.com" class="name-color">DIVYASHRIMOKA2021@GMAIL.COM</a>
             </div>
             <p class="lead mb-5">  DATA ENGINEER · TABLEAU DEVELOPER · BIG DATA ENTHUSIAST · TECHNOPHILE · TEAM PLAYER</p>
@@ -82,7 +82,7 @@
                      <li>Demonstrated adeptness at leveraging cloud technologies, particularly AWS (EC2, EBS, S3, EMR, AWS Glue, DMS) and Microsoft Azure (Databricks, Azure Function , BLOB and Data Lake storage, Azure SQL Synapse Analytics (DW), showcasing the ability to design, implement, and optimize scalable and reliable data solutions on leading cloud platforms.</li>
                   </ul>
                </div>
-               <div class="flex-shrink-0"><span class="text-primary">Jun 2019 - Jul 2023</span></div>
+               <div class="flex-shrink-0"><span class="text-primary">Jun 2019 - Jul 2022</span></div>
             </div>
          </div>
       </section>
@@ -207,7 +207,7 @@
                      <li>Successfully implemented a proof of concept (POC) for building an ETL pipeline using Cloud Data Fusion, extracting data from a private Cloud SQL instance, loading it into Big Query, and scheduling workflows using Airflow, resulting in a 40% reduction in time for data processing and analysis.</li>
                   </ul>
                </div>
-               <div class="flex-shrink-0"><span class="text-primary">Nov 2019 - Oct 2020</span></div>
+               <div class="flex-shrink-0"><span class="text-primary">Jun 2019 - Jul 2022</span></div>
             </div>
          </div>
       </section>
