--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
    <!-- Navigation-->
    <nav class="navbar navbar-expand-lg navbar-dark fixed-top" style="background-color: #0c585f;" id="sideNav">
       <a class="navbar-brand js-scroll-trigger" href="#page-top">
-      <span class="d-block d-lg-none">Divya Shree Moka</span>
+      <span class="d-block d-lg-none">Divya Shree M</span>
       <span class="d-none d-lg-block"><img class="img-fluid img-profile rounded-circle z-depth-2 mx-auto mb-2"
          src="assets/img/profileImage.jpeg" alt="700x900" /></span>
       </a>
@@ -48,13 +48,13 @@
          <div class="resume-section-content">
             <h1 class="mb-0">
                DIVYA SHREE
-               <span class="name-color">MOKA</span>
+               <span class="name-color">M</span>
             </h1>
             <div class="subheading mb-5">
-               DALLAS, TX 75033
+               DURHAM, NC 27519
                <a href="mailto:divyashrimoka2021@gmail.com" class="name-color">DIVYASHRIMOKA2021@GMAIL.COM</a>
             </div>
-            <p class="lead mb-5">  DATA ENGINEER · TABLEAU DEVELOPER · BIG DATA ENTHUSIAST · TECHNOPHILE · TEAM PLAYER</p>
+            <p class="lead mb-5">  JIRA ADMINISTRATOR · ATLASSIAN CERTIFIED EXPERT · WORKFLOW AUTOMATION SPECIALIST · COLLABORATION TOOLS INTEGRATOR · PROJECT MANAGEMENT TOOLS SPECIALIST</p>
             <div class="social-icons">
                <a class="social-icon-linkedin" href="https://www.linkedin.com/in/divya-shree-moka/"><i
                   class="fab fa-linkedin-in"></i></a>
@@ -71,14 +71,16 @@
                <div class="flex-grow-1">
                   <h3 class="mb-0">Data Engineer</h3>
                   <ul>
-                     <li>Around 4 years of experience as a Data Engineer. Proficient in data extraction, modification, validation, analysis, management, and reporting. Strong expertise in ETL development, including designing specifications, offshore development coordination, and optimal ETL mappings.</li>
-                     <li>Demonstrated proficiency in utilizing a diverse set of programming languages, including Python, SQL, Scala, and Shell Scripting, to conduct comprehensive data engineering tasks, spanning scripting, analysis, and automation.</li>
-                     <li>Applied extensive experience with powerful libraries such as NumPy, Pandas, SciPy, Scikit-Learn, TensorFlow, and Matplotlib, ensuring the realization of advanced data processing, machine learning, and visualization capabilities for complex datasets.</li>
-                     <li>Utilized extensive knowledge of Big Data technologies, including Hadoop, Hive, Sqoop, Oozie, and HDFC, enabling the development of robust and efficient big data processing pipelines.</li>
-                     <li>Proficiently used visualization tools like Tableau, Power BI, and MS Excel, ensuring the effective communication of insights and trends to both technical and non-technical stakeholders.</li>
-                     <li>Showcased expertise in managing a variety of databases, including MySQL, PostgreSQL, Oracle, and MongoDB, reflecting a versatile skill set in handling diverse data storage and retrieval needs.</li>
-                     <li>Applied proficiency in both Agile (SCRUM) and Waterfall methodologies, seamlessly adapting to varying project requirements and ensuring efficient collaboration within dynamic development environments.</li>
-                     <li>Demonstrated adeptness at leveraging cloud technologies, particularly AWS (EC2, EBS, S3, EMR, AWS Glue, DMS) and Microsoft Azure (Databricks, Azure Function , BLOB and Data Lake storage, Azure SQL Synapse Analytics (DW), showcasing the ability to design, implement, and optimize scalable and reliable data solutions on leading cloud platforms.</li>
+                     <li>Atlassian Certified Professional (ACP-120, ACP-620) with proven expertise in managing cloud-based JIRA environments.</li>
+                     <li>Skilled in designing and implementing custom JIRA workflows, fields, and automation using Groovy scripting, leading to a 40% reduction in manual tasks.</li>
+                     <li>Integrated JIRA with Confluence, Bitbucket, and other collaboration tools, enhancing cross-team efficiency and seamless issue tracking.</li>
+                     <li>Managed JIRA user roles, permissions, and project configurations for teams of 500+ users, ensuring optimal system access and security.</li>
+                     <li>Proactively monitored JIRA performance, troubleshooting issues to ensure minimal downtime and improved system stability.</li>
+                     <li>Created custom dashboards and reports in JIRA, providing stakeholders with enhanced project visibility and real-time updates.</li>
+                     <li>Led successful migration from legacy project management tools to JIRA, ensuring minimal disruption and streamlined project tracking.</li>
+                     <li>Conducted JIRA and Confluence training sessions, improving team adoption and maximizing tool usage across departments.</li>
+                     <li>Worked closely with IT teams to integrate JIRA with third-party tools, optimizing workflow automation and enhancing team productivity.</li>
+                     <li>Expertise in optimizing project management processes, improving team productivity, and enabling faster, more efficient delivery timelines.</li>
                   </ul>
                </div>
             </div>
@@ -94,7 +96,7 @@
                   <h3 class="mb-0">NorthWest Missouri State University</h3>
                   <div class="subheading mb-3">MASTER OF SCIENCE</div>
                   <div>COMPUTER SCIENCE</div>
-                  <p>GPA: 3.70</p>
+                  <p>GPA: 3.80</p>
                </div>
                <div class="flex-shrink-0"><span class="text-primary">August 2022 - December 2023</span></div>
             </div>
