--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
             </h1>
             <div class="subheading mb-5">
                DURHAM, NC 27519
-               <a href="mailto:divyashrimoka2021@gmail.com" class="name-color">DIVYASHRIMOKA2021@GMAIL.COM</a>
+               <a href="mailto:divyashrimoka2021@gmail.com" class="name-color">divya.jiraexpert@gmail.com</a>
             </div>
             <p class="lead mb-5">  JIRA ADMINISTRATOR · ATLASSIAN CERTIFIED EXPERT · WORKFLOW AUTOMATION SPECIALIST · COLLABORATION TOOLS INTEGRATOR · PROJECT MANAGEMENT TOOLS SPECIALIST</p>
             <div class="social-icons">
@@ -121,6 +121,9 @@
                <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" rel="stylesheet">
                <link href="assets/fonts/fontawesome.min.css" rel="stylesheet">
                <ul class="list-inline">
+                  <li class="list-inline-item">
+                     <img src="https://cdn.iconscout.com/icon/free/png-256/jira-282225.png" alt="JIRA" title="JIRA" style="width: 30px; height: 30px;">
+                 </li>
                   <li class="list-inline-item"><i class="fab fa-python" title="Python"></i></li>
                   <li class="list-inline-item"><i class="fas fa-database" title="SQL"></i></li>
                   <li class="list-inline-item"><i class="fab fa-java" title="Java"></i></li>
@@ -137,29 +140,23 @@
             </ul>
             <div class="subheading mb-3">Other Skills</div>
             <ul class="fa-ul mb-0">
+               <li>JIRA Administration, Workflow Management, Automation</li>
+               <li>Groovy Scripting, Atlassian Marketplace Apps, User Management</li>
                <li>Shell Scripting, Kafka, Apache, Hadoop, Hive, Scala</li>
-            </ul>
+           </ul>
             <div class="subheading mb-3">Workflow</div>
             <ul class="fa-ul mb-0">
                <li>
                   <span class="fa-li"><i class="fas fa-check"></i></span>
-                  Data Collection & Ingestion
+                  JIRA Project Creation & Management
                </li>
                <li>
                   <span class="fa-li"><i class="fas fa-check"></i></span>
-                  Data Cleaning & Preprocessing
+                  JIRA Integration with Confluence & Bitbucket
                </li>
                <li>
                   <span class="fa-li"><i class="fas fa-check"></i></span>
-                  ETL Processes
-               </li>
-               <li>
-                  <span class="fa-li"><i class="fas fa-check"></i></span>
-                  Data Modeling & Storage
-               </li>
-               <li>
-                  <span class="fa-li"><i class="fas fa-check"></i></span>
-                  Data Security & Compliance
+                  Automation with JIRA Automation
                </li>
             </ul>
          </div>
