--- a/index.html
+++ b/index.html
@@ -52,7 +52,8 @@
             </h1>
             <div class="subheading mb-5">
                DURHAM, NC 27519
-               <a href="mailto:divyashrimoka2021@gmail.com" class="name-color">divya.jiraexpert@gmail.com</a>
+               <p></p>
+               <a href="mailto:divya.jiraexpert@gmail.com" class="name-color">divya.jiraexpert@gmail.com</a>
             </div>
             <p class="lead mb-5">  JIRA ADMINISTRATOR · ATLASSIAN CERTIFIED EXPERT · WORKFLOW AUTOMATION SPECIALIST · COLLABORATION TOOLS INTEGRATOR · PROJECT MANAGEMENT TOOLS SPECIALIST</p>
             <div class="social-icons">
