--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
             <h2 class="mb-5">Work Experience</h2>
             <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                <div class="flex-grow-1">
-                  <h3 class="mb-0">Data Engineer</h3>
+                  <h3 class="mb-0">JIRA ADMINISTRATOR</h3>
                   <ul>
                      <li>Atlassian Certified Professional (ACP-120, ACP-620) with proven expertise in managing cloud-based JIRA environments.</li>
                      <li>Skilled in designing and implementing custom JIRA workflows, fields, and automation using Groovy scripting, leading to a 40% reduction in manual tasks.</li>
