--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@
              <!-- Third Project -->
              <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                  <div class="flex-grow-1">
-                     <h3 class="mb-0">WIPRO - AMP LIFE</h3>
+                     <h3 class="mb-0">WIPRO - Ericsson</h3>
                      <div class="subheading mb-3">Responsibilities</div>
                      <ul>
                          <li>Configured JIRA workflows, custom fields, and permission schemes to meet specific project needs, ensuring smooth task tracking and team collaboration.</li>
