--- a/index.html
+++ b/index.html
@@ -125,22 +125,18 @@
                  <li class="list-inline-item"><i class="fab fa-python" title="Python"></i></li>
                   <li class="list-inline-item"><i class="fas fa-database" title="SQL"></i></li>
                   <li class="list-inline-item"><i class="fab fa-java" title="Java"></i></li>
-                  <li class="list-inline-item"><i class="fab fa-jenkins" title="Jenkins"></i></li>
                   <li class="list-inline-item"><i class="fas fa-chart-bar" title="Tableau/PowerBI"></i></li>
                   <li class="list-inline-item"><i class="fab fa-aws" title="AWS"></i></li>
                   <li class="list-inline-item"><i class="fab fa-windows" title="Microsoft Azure"></i></li>
                   <li class="list-inline-item"><i class="fas fa-cogs" title="Docker/Kubernetes"></i></li>
-                  <li class="list-inline-item"><i class="fas fa-snowflake" title="Snowflake"></i></li>
-                  <li class="list-inline-item"><i class="fab fa-js" title="JavaScript"></i></li>
-                  <li class="list-inline-item"><i class="fab fa-node-js" title="NodeJS"></i></li>
                   <li class="list-inline-item"><i class="fas fa-code" title="HTML"></i></li>
                </ul>
             </ul>
             <div class="subheading mb-3">Other Skills</div>
             <ul class="fa-ul mb-0">
                <li>JIRA Administration, Workflow Management, Automation</li>
-               <li>Groovy Scripting, Atlassian Marketplace Apps, User Management</li>
-               <li>Shell Scripting, Kafka, Apache, Hadoop, Hive, Scala</li>
+               <li>Atlassian Marketplace Apps, User Management</li>
+               <li>Kafka, Apache, Hadoop</li>
            </ul>
             <div class="subheading mb-3">Workflow</div>
             <ul class="fa-ul mb-0">
@@ -150,7 +146,7 @@
                </li>
                <li>
                   <span class="fa-li"><i class="fas fa-check"></i></span>
-                  JIRA Integration with Confluence & Bitbucket
+                  JIRA Integration with Confluence 
                </li>
                <li>
                   <span class="fa-li"><i class="fas fa-check"></i></span>
@@ -171,11 +167,11 @@
                      <div class="subheading mb-3">Responsibilities</div>
                      <ul>
                          <li>Managed and administered JIRA projects, including creation, configuration, and maintenance of JIRA schemes such as workflows, screen schemes, and permissions.</li>
-                         <li>Implemented custom workflows, fields, and automation scripts using <b>JIRA Automation</b> and <b>Groovy scripting</b>, which improved operational efficiency by automating routine tasks.</li>
+                         <li>Implemented custom workflows, fields, and automation scripts using <b>JIRA Automation</b> and which improved operational efficiency by automating routine tasks.</li>
                          <li>Performed user management tasks, including creating and managing roles, groups, and permissions, supporting over 500 users across multiple teams.</li>
-                         <li>Integrated JIRA with <b>Confluence</b>, <b>Bitbucket</b>, and other tools, streamlining cross-team collaboration and issue tracking processes.</li>
+                         <li>Integrated JIRA with <b>Confluence</b>, streamlining cross-team collaboration and issue tracking processes.</li>
                          <li>Monitored and troubleshooted JIRA performance issues, reducing system downtime and enhancing stability.</li>
-                         <li><b>Tools/Technologies: </b>JIRA, Confluence, Bitbucket, Groovy Scripting, JIRA Automation</li>
+                         <li><b>Tools/Technologies: </b>JIRA, Confluence, JIRA Automation</li>
                      </ul>
                  </div>
                  <div class="flex-shrink-0"><span class="text-primary">Oct 2020 - Jul 2022</span></div>
@@ -234,7 +230,7 @@
                   <a class="btn btn-outline-primary" href="https://github.com/divyashrim11/IHSA.git"><i
                      class="fab fa-github"></i> View on GitHub </a>
                </div>
-               <div class="flex-shrink-0"><span class="text-primary">May 2022 - Sep 2024</span></div>
+               <div class="flex-shrink-0"><span class="text-primary">May 2023 - Dec 2023</span></div>
             </div>
             <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                <div class="flex-grow-1">
