--- a/index.html
+++ b/index.html
@@ -72,9 +72,9 @@
                <div class="flex-grow-1">
                   <h3 class="mb-0">JIRA ADMINISTRATOR</h3>
                   <ul>
-                     <li>Atlassian Certified Professional (ACP-120, ACP-620) with proven expertise in managing cloud-based JIRA environments.</li>
-                     <li>Skilled in designing and implementing custom JIRA workflows, fields, and automation using Groovy scripting, leading to a 40% reduction in manual tasks.</li>
-                     <li>Integrated JIRA with Confluence, Bitbucket, and other collaboration tools, enhancing cross-team efficiency and seamless issue tracking.</li>
+                     <li>Atlassian Certified Professional (ACP-120, ACP-620, ACP-100) with proven expertise in managing cloud-based JIRA environments.</li>
+                     <li>Skilled in designing and implementing custom JIRA workflows, fields, and automation leading to a 40% reduction in manual tasks.</li>
+                     <li>Integrated JIRA with Confluence, and other collaboration tools, enhancing cross-team efficiency and seamless issue tracking.</li>
                      <li>Managed JIRA user roles, permissions, and project configurations for teams of 500+ users, ensuring optimal system access and security.</li>
                      <li>Proactively monitored JIRA performance, troubleshooting issues to ensure minimal downtime and improved system stability.</li>
                      <li>Created custom dashboards and reports in JIRA, providing stakeholders with enhanced project visibility and real-time updates.</li>
@@ -161,6 +161,25 @@
              <h2 class="mb-5">Projects</h2>
      
              <!-- First Project -->
+             <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
+               <div class="flex-grow-1">
+                   <h3 class="mb-0">US CHAMBER OF COMMERCE</h3>
+                   <div class="subheading mb-3">Responsibilities</div>
+                   <ul>
+                       <li>Managed and administered JIRA projects, including creation, configuration, and maintenance of JIRA schemes such as workflows, screen schemes, and permissions.</li>
+                       <li>Developed over 10 tailored JIRA workflows, custom fields, and permission schemes, boosting project tracking and team efficiency by 25%.</li>
+                       <li>Implemented custom workflows, fields, and automation scripts using <b>JIRA Automation</b> to improve operational efficiency by automating routine tasks.</li>
+                       <li>Seamlessly integrated JIRA with <b>Confluence</b>, resulting in a 30% increase in cross-team productivity through enhanced collaboration.</li>
+                       <li>Oversaw 5+ Agile boards, configuring custom columns, JQL filters, and sprint reports to maintain Agile standards and effectively monitor team performance.</li>
+                       <li>Performed user management tasks, including creating and managing roles, groups, and permissions, supporting over 500 users across multiple teams.</li>
+                       <li>Trained 50+ users on JIRA functionalities, created 10+ user guides, and maintained detailed project documentation, supporting seamless project execution.</li>
+                       <li>Integrated JIRA with <b>Confluence</b>, streamlining cross-team collaboration and issue tracking processes.</li>
+                       <li>Monitored and troubleshooted JIRA performance issues, reducing system downtime and enhancing stability.</li>
+                       <li><b>Tools/Technologies: </b>JIRA, Confluence, JIRA Automation</li>
+                   </ul>
+               </div>
+               <div class="flex-shrink-0"><span class="text-primary">Oct 2020 - Jul 2022</span></div>
+           </div>         
              <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                  <div class="flex-grow-1">
                      <h3 class="mb-0">WIPRO - TELEFONICA</h3>
