--- a/index.html
+++ b/index.html
@@ -404,6 +404,10 @@
                </li>
                <li>
                   <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
+                  <a href="https://cp.certmetrics.com/atlassian/en/public/badge/c?id=712020:80f369b5-509b-4a6d-940e-edbd292f335c&ccat=1&date=2024-10-14">"Atlassian Certified in Jira Data Center"</a> - Atlassian Certified in Jira Data Center.
+               </li>
+               <li>
+                  <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
                   <a href="https://www.credly.com/badges/499a53fa-4cd9-4166-979a-baf74531f236/public_url">"Tableau Desktop Specialist"</a> - Certified Tableau Developer.
                </li>
                <li>
