--- a/index.html
+++ b/index.html
@@ -396,11 +396,11 @@
             <ul class="fa-ul mb-0">
                <li>
                   <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
-                  <a href="https://cp.certmetrics.com/atlassian/en/public/badge/c?id=712020:c0e8f1a6-14d5-4113-822b-49b6fc8bed9c&ccat=30&date=2024-9-7">"Atlassian Certified in Managing Jira Projects for Cloud"</a> - Atlassian Certified in Managing Jira Projects for Cloud.
+                  <a href="https://cp.certmetrics.com/atlassian/en/public/badge/c?id=712020:80f369b5-509b-4a6d-940e-edbd292f335c&ccat=30&date=2024-9-7>">"Atlassian Certified in Managing Jira Projects for Cloud"</a> - Atlassian Certified in Managing Jira Projects for Cloud.
                </li>
                <li>
                   <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
-                  <a href="https://cp.certmetrics.com/atlassian/en/public/badge/c?id=712020:c0e8f1a6-14d5-4113-822b-49b6fc8bed9c&ccat=26&date=2024-9-13">"Atlassian Certified Jira Administrator for Cloud"</a> - Atlassian Certified Jira Administrator for Cloud.
+                  <a href="https://cp.certmetrics.com/atlassian/en/public/badge/c?id=712020:80f369b5-509b-4a6d-940e-edbd292f335c&ccat=26&date=2024-9-13">"Atlassian Certified Jira Administrator for Cloud"</a> - Atlassian Certified Jira Administrator for Cloud.
                </li>
                <li>
                   <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
