--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#ResearchPapers">Research Papers</a></li>
             <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#tableau-dashboards">Tableau Dashboards</a></li>
             <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#awards">Certifications</a></li>
-            <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#cv">Curriculum Vitae</a></li>
+            <!-- <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#cv">Curriculum Vitae</a></li> -->
          </ul>
       </div>
    </nav>
@@ -54,6 +54,7 @@
                DURHAM, NC 27519
                <p></p>
                <a href="mailto:divya.jiraexpert@gmail.com" class="name-color">divya.jiraexpert@gmail.com</a>
+               
             </div>
             <p class="lead mb-5">  JIRA ADMINISTRATOR · ATLASSIAN CERTIFIED EXPERT · WORKFLOW AUTOMATION SPECIALIST · COLLABORATION TOOLS INTEGRATOR · PROJECT MANAGEMENT TOOLS SPECIALIST</p>
             <div class="social-icons">
@@ -174,7 +175,7 @@
                        <li><b>Tools/Technologies: </b>JIRA, Confluence, JIRA Automation</li>
                    </ul>
                </div>
-               <div class="flex-shrink-0"><span class="text-primary">Oct 2020 - Jul 2022</span></div>
+               <div class="flex-shrink-0"><span class="text-primary">Aug 2023 - Present</span></div>
            </div>         
              <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                  <div class="flex-grow-1">
@@ -430,12 +431,12 @@
          </div>
       </section>
       <!-- CV Download -->
-      <section class="resume-section" id="cv">
+      <!-- <section class="resume-section" id="cv">
          <div class="resume-section-content">
             <h2 class="mb-5">Download CV</h2>
             <p>Click the link below to download my CV:</p>
             <p><a href="Divya_Shree_Moka_CV.pdf" class="btn btn-primary">Download CV</a></p>
          </div>
-      </section>
+      </section> -->
    </div>
 </body>
